[gd_scene load_steps=8 format=3 uid="uid://b8txfoox5y1qr"]

[ext_resource type="Script" uid="uid://e7xagyljh0qf" path="res://scripts/enemy.gd" id="1_vtvda"]
[ext_resource type="Resource" uid="uid://b8v4qquc17tuq" path="res://data/FloatingEnemy.tres" id="2_gf8k1"]
[ext_resource type="PackedScene" uid="uid://dh6488mkbfq22" path="res://scenes/EnemyProjectile.tscn" id="2_vtvda"]
[ext_resource type="Texture2D" uid="uid://cnnt41l6cvuob" path="res://assets/floating_enemy.png" id="4_gf8k1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5xqv"]
size = Vector2(130, 130.00003)

[sub_resource type="CircleShape2D" id="CircleShape2D_fmri8"]
radius = 1015.0122

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtvda"]
size = Vector2(110.00003, 110.00003)

[node name="FloatingEnemy" type="CharacterBody2D"]
scale = Vector2(0.2, 0.2)
collision_layer = 4
script = ExtResource("1_vtvda")
stats = ExtResource("2_gf8k1")
projectile_scene = ExtResource("2_vtvda")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_gf8k1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6.1094725e-06, 2.9802317e-07)
scale = Vector2(0.9999997, 0.9999997)
shape = SubResource("RectangleShape2D_y5xqv")

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_fmri8")

[node name="FireTimer" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
layout_direction = 2
offset_left = -60.0
offset_top = -109.99999
offset_right = 59.999985
offset_bottom = -75.00001
max_value = 20.0
value = 20.0
rounded = true
show_percentage = false

[node name="ContactDamageArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactDamageArea"]
position = Vector2(1.6391272e-06, 6.2584863e-06)
scale = Vector2(0.99999946, 0.99999946)
shape = SubResource("RectangleShape2D_vtvda")
